plugins {
    id 'java'
    id "com.github.onslip.gradle-one-jar" version "1.0.6"
}

group 'com.EmpireLife'
version '1.0-SNAPSHOT'
description 'Testing framework for running qat-'
java.sourceCompatibility = JavaVersion.VERSION_1_8

repositories {
    flatDir {
        dirs 'lib'
    }
    mavenLocal()
    mavenCentral()
}

def cucumber_version = '7.3.4'
def selenium_version = "3.141.59"
def rest_assured_version = "4.5.0"
def driver_manager_version = '5.0.2'
def appium_version = '7.6.0'
def apache_poi_version = "5.0.0"
def xml_apis_version = "1.4.01"
def jackson_version = "2.13.3"

configurations.all {
    resolutionStrategy {
        force "xml-apis:xml-apis:${xml_apis_version}"
    }
}

configurations {
    cucumberRuntime {
        extendsFrom testImplementation
    }
}

dependencies {
    // Selenium
    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: selenium_version
    implementation group: 'org.seleniumhq.selenium', name: 'selenium-api', version: selenium_version

    // Cucumber
    implementation group: 'io.cucumber', name: 'cucumber-core', version: cucumber_version
    implementation group: 'io.cucumber', name: 'cucumber-picocontainer', version: cucumber_version
    implementation group: 'io.cucumber', name: 'cucumber-java', version: cucumber_version
    implementation group: 'io.cucumber', name: 'cucumber-junit', version: cucumber_version
    implementation group: 'io.cucumber', name: 'gherkin', version: '23.0.1'

    // ReportPortal
    implementation group: 'com.epam.reportportal', name: 'client-java', version: '5.1.4'
    implementation group: 'com.epam.reportportal', name: 'agent-java-cucumber6', version: '5.1.1'
    implementation group: 'com.epam.reportportal', name: 'agent-java-junit5', version: '5.1.1'
    implementation group: 'com.epam.reportportal', name: 'httpclient-repacked', version: '1.0.2'

    // Jackson
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: jackson_version
    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: jackson_version
    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: jackson_version

    // Other
    implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: driver_manager_version
    implementation group: 'io.rest-assured', name: 'rest-assured', version: rest_assured_version
    implementation group: 'org.json', name: 'json', version: '20220320'
    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
    implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.26'
    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.10'
    implementation group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.13'
    implementation group: 'org.awaitility', name: 'awaitility', version: '4.0.3'
    implementation group: 'net.lightbody.bmp', name: 'browsermob-core', version: '2.1.5'
    implementation group: 'io.percy', name: 'percy-java-selenium', version: '0.1.4'
    implementation group: 'org.jsoup', name: 'jsoup', version: '1.15.1'
    implementation group: 'org.apache.poi', name: 'poi', version: apache_poi_version
    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: apache_poi_version
    implementation group: 'io.appium', name: 'java-client', version: appium_version
    implementation group: 'org.jetbrains', name: 'annotations', version: '23.0.0'
    implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.6.0'
    implementation group: 'xml-apis', name: 'xml-apis', version: xml_apis_version

    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36'
    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.36'
    implementation group: 'org.assertj', name: 'assertj-core', version: '3.22.0'
    implementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.2'
    implementation group: 'junit', name: 'junit', version: '4.13.2'
}


task cucumber() {
    dependsOn assemble, testClasses
    doLast {
        javaexec {
            String threads = System.getProperty("threads", "1")
            int parsedThreads = Integer.parseInt(threads)

            if (parsedThreads < 1) {
                throw new IllegalArgumentException("Illegal number of threads: " + parsedThreads)
            }
            else if (parsedThreads > 1) {
                System.setProperty("parallel", "true")
            }

            systemProperty "cucumber.options", System.getProperty("cucumber.options")
            systemProperty "cucumber.filter.tags", System.getProperty("cucumber.filter.tags")
            systemProperty "config.filepath", System.getProperty("config.filepath")
            systemProperty "config.profile", System.getProperty("config.profile")
            systemProperty "parallel", System.getProperty("parallel", "false")

            main = "io.cucumber.core.cli.Main"
            classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
            args = ['--plugin', 'pretty',
                    '--plugin', 'com.epam.reportportal.cucumber.ScenarioReporter',
                    '--glue', 'ca.empire',
                    'src/test/resources/feature',
                    '--threads', System.getProperty("threads", threads)]
        }
    }
}